--- a/website/static/website/css/modules/global/_page-title.scss
+++ b/website/static/website/css/modules/global/_page-title.scss
@@ -57,6 +57,7 @@
 
 .page-title--title.page-title--title--project {
   margin-bottom: calc(20 / 36 * 1em);
+  widows: 2;
 
   @media (min-width: $breakpoint-notebook) {
     font-size: calc(46 / 18 * 1em);
